pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart.weak.modular.expect
library /*isNonNullableByDefault*/;
//
// Problems in library:
//
// pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:42:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
//   acceptsInt(x);
//              ^
//
// pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:54:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
//   acceptsInt(x);
//              ^
//
// pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:66:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
//   acceptsInt(x);
//              ^
//
// pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:78:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
//   acceptsInt(x);
//              ^
//
import self as self;
import "dart:core" as core;

class C extends core::Object {
  final field core::int? _promotable;
  final field core::int? _notPromotable;
  static final field core::int? staticPromotable = ((self::C c) → core::int => !(c.{self::C::_promotable}{core::int?} == null) ?{core::int} c.{self::C::_promotable}{core::int} : 0)(new self::C::•(0)){(self::C) → core::int};
  static final field core::int? staticNotPromotable = ((self::C c) → core::int? => !(c.{self::C::_notPromotable}{core::int?} == null) ?{core::int?} c.{self::C::_notPromotable}{core::int?} : 0)(new self::C::•(0)){(self::C) → core::int?};
  final field core::int? instancePromotable = ((self::C c) → core::int => !(c.{self::C::_promotable}{core::int?} == null) ?{core::int} c.{self::C::_promotable}{core::int} : 0)(new self::C::•(0)){(self::C) → core::int};
  final field core::int? instanceNotPromotable = ((self::C c) → core::int? => !(c.{self::C::_notPromotable}{core::int?} == null) ?{core::int?} c.{self::C::_notPromotable}{core::int?} : 0)(new self::C::•(0)){(self::C) → core::int?};
  late final field core::int? instancePromotableViaThis = !(this.{self::C::_promotable}{core::int?} == null) ?{core::int} this.{self::C::_promotable}{core::int} : 0;
  late final field core::int? instanceNotPromotableViaThis = !(this.{self::C::_notPromotable}{core::int?} == null) ?{core::int?} this.{self::C::_notPromotable}{core::int?} : 0;
  constructor •(core::int i) → self::C
    : self::C::_promotable = i, self::C::_notPromotable = i, super core::Object::•()
    ;
}
class D extends core::Object {
  field core::int? _notPromotable = null;
  synthetic constructor •() → self::D
    : super core::Object::•()
    ;
}
static final field core::int? topLevelPromotable = ((self::C c) → core::int => !(c.{self::C::_promotable}{core::int?} == null) ?{core::int} c.{self::C::_promotable}{core::int} : 0)(new self::C::•(0)){(self::C) → core::int};
static final field core::int? topLevelNotPromotable = ((self::C c) → core::int? => !(c.{self::C::_notPromotable}{core::int?} == null) ?{core::int?} c.{self::C::_notPromotable}{core::int?} : 0)(new self::C::•(0)){(self::C) → core::int?};
static method acceptsInt(core::int x) → void {}
static method testTopLevelPromotable() → void {
  core::int? x = self::topLevelPromotable;
  self::acceptsInt(invalid-expression "pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:42:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
  acceptsInt(x);
             ^" in x as{TypeError,ForNonNullableByDefault} core::int);
}
static method testTopLevelNotPromotable() → void {
  core::int? x = self::topLevelNotPromotable;
  x = null;
}
static method testStaticPromotable() → void {
  core::int? x = self::C::staticPromotable;
  self::acceptsInt(invalid-expression "pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:54:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
  acceptsInt(x);
             ^" in x as{TypeError,ForNonNullableByDefault} core::int);
}
static method testStaticNotPromotable() → void {
  core::int? x = self::C::staticNotPromotable;
  x = null;
}
static method testInstancePromotable(self::C c) → void {
  core::int? x = c.{self::C::instancePromotable}{core::int?};
  self::acceptsInt(invalid-expression "pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:66:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
  acceptsInt(x);
             ^" in x as{TypeError,ForNonNullableByDefault} core::int);
}
static method testInstanceNotPromotable(self::C c) → void {
  core::int? x = c.{self::C::instanceNotPromotable}{core::int?};
  x = null;
}
static method testInstancePromotableViaThis(self::C c) → void {
  core::int? x = c.{self::C::instancePromotableViaThis}{core::int?};
  self::acceptsInt(invalid-expression "pkg/front_end/testcases/inference_update_2/during_top_level_type_inference.dart:78:14: Error: The argument type 'int?' can't be assigned to the parameter type 'int' because 'int?' is nullable and 'int' isn't.
  acceptsInt(x);
             ^" in x as{TypeError,ForNonNullableByDefault} core::int);
}
static method testInstanceNotPromotableViaThis(self::C c) → void {
  core::int? x = c.{self::C::instanceNotPromotableViaThis}{core::int?};
  x = null;
}
static method main() → dynamic {}
